@@ -1,8 +1,9 @@
 package functional;
 
+import org.apache.logging.log4j.LogManager;
+
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class Code {
     public static final List<Integer> INTEGER_LIST = List.of(3, -2, 0, 4);
@@ -11,47 +12,42 @@ public class Code {
 
     public void consumer() {
         for (int i = 0; i < INTEGER_LIST.size(); i++) { //for i
-            System.out.println(INTEGER_LIST.get(i));
+            LogManager.getLogger(this.getClass()).info(INTEGER_LIST.get(i));
         }
         for (int item : INTEGER_LIST) {  //for each
-            System.out.println(item);
+            LogManager.getLogger(this.getClass()).info(item);
         }
-        INTEGER_LIST.stream()
-                .forEach(System.out::println);  //functional //item->System.out.println(item)
+        INTEGER_LIST
+                .forEach(item -> LogManager.getLogger(this.getClass()).info(item));
     }
 
     public void predicate() { // only positive values
-        for (int i = 0; i < INTEGER_LIST.size(); i++) { //for i
-            if (INTEGER_LIST.get(i) >= 0) {
-                System.out.println(INTEGER_LIST.get(i));
-            }
-        }
-        for (int item : INTEGER_LIST) {  //for each
+        for (int item : INTEGER_LIST) {
             if (item >= 0) {
-                System.out.println(item);
+                LogManager.getLogger(this.getClass()).info(item);
             }
         }
         INTEGER_LIST.stream() //functional
                 .filter(item -> item >= 0)
-                .forEach(System.out::println);
+                .forEach(item -> LogManager.getLogger(this.getClass()).info(item));
     }
 
-    public void function() {
+    public void function() { // convert to int, *2 & remove 0
         List<Integer> result2 = new ArrayList<>();
         for (String item : STRING_LIST) {  //for each
-            int intItem = Integer.valueOf(item);
+            int intItem = Integer.parseInt(item);
             if (intItem != 0) {
                 result2.add(intItem * 2);
             }
         }
-        System.out.println(result2);
+        LogManager.getLogger(this.getClass()).info(result2);
 
         List<Integer> result = STRING_LIST.stream() //functional
                 .map(Integer::valueOf)
                 .filter(item -> item != 0)
                 .map(item -> item * 2)
-                .collect(Collectors.toList());
-        System.out.println(result);
+                .toList();
+        LogManager.getLogger(this.getClass()).info(result);
     }
 
 }
